1.2.11:
Sam Lantinga - Sat Dec 31 09:35:40 EST 2011
 * SDL_image is now under the zlib license
Michael Bonfils - Mon Nov 28 21:46:00 EST 2011
 * Added WEBP image support
Thomas Klausner - Wed Jan 19 19:31:25 PST 2011
 * Fixed compiling with libpng 1.4
Sam Lantinga - Mon May 10 22:42:53 PDT 2010
 * Fixed loading HAM6 images with stencil mask
Mark Tucker - Fri, 27 Nov 2009 12:38:21 -0500
 * Fixed bug loading 15 and 16 bit BMP images

1.2.10:
Sam Lantinga - Sat Nov 14 11:22:14 PST 2009
 * Fixed bug loading multiple images

1.2.9:
Sam Lantinga - Tue Nov 10 00:29:20 PST 2009
 * Fixed alpha premultiplication on Mac OS X and iPhone OS
Sam Lantinga - Sun Nov  8 07:52:11 PST 2009
 * Fixed checking for IMG_Init() return value in image loaders

1.2.8:
Sam Lantinga - Sun Oct  4 13:12:54 PDT 2009
 * Added support for uncompressed PCX files
Mason Wheeler - 2009-06-10 06:29:45 PDT 
 * Added IMG_Init()/IMG_Quit() to prevent constantly loading and unloading DLLs
Couriersud - Mon, 12 Jan 2009 17:21:13 -0800
 * Added support for ICO and CUR image files
Eric Wing - Fri, 2 Jan 2009 02:01:16 -0800
 * Added ImageIO loading infrastructure for Mac OS X
 * Added UIImage loading infrastructure for iPhone / iPod Touch

1.2.7:
Sam Lantinga - Sun Nov  2 15:08:27 PST 2008
 * Fixed buffer overflow in BMP loading code, discovered by j00ru//vx
Sam Lantinga - Fri Dec 28 08:34:54 PST 2007
 * Fixed buffer overflow in GIF loading code, discovered by Michael Skladnikiewicz

1.2.6:
Sam lantinga - Wed Jul 18 00:30:32 PDT 2007
 * Improved detection of libjpeg, libpng, and libtiff at configure time
 * PNG and TIFF images are correctly identified even if dynamic libraries
   to load them aren't available.
 * Fixed loading of TIFF images using libtiff 3.6
Sam Lantinga - Thu Jul 5 07:52:35 2007
 * Fixed static linking with libjpeg
Michael Koch - Tue Feb 13 10:09:17 2007
 * Fixed crash in IMG_ReadXPMFromArray()

1.2.5:
Maurizio Monge - Sun May 14 13:57:32 PDT 2006